--- a/03-use-case.html
+++ b/03-use-case.html
@@ -44,7 +44,7 @@
                 <td>Elément permettant d'identifier un diagramme par son label.</td>
             </tr>
             <tr>
-                <td>Sytem Boundary</td>
+                <td>System Boundary</td>
                 <td><img src="assets/images/usecase-system-boundary.png" alt="Frame"></td>
                 <td>Permet de délimiter le système.</td>
             </tr>
@@ -151,10 +151,10 @@
         <p>Après avoir échangé sur les besoins de cette société, vous souhaitez réalisez un diagramme de cas d'utilisation répondant aux demandes suivantes :</p>
         <div class="instructions">
             <ol>
-                <li>Un trajet en bus comprend plusieurs passagés et un guide</li>
+                <li>Un trajet en bus comprend plusieurs passagers et un guide</li>
                 <li>Le guide sera chargé d'effectuer des enregistrements groupés pour l'ensemble des clients</li>
                 <li>Certains clients peuvent aussi choisir d'effectuer eux-même l'enregistrement (individuellement)</li>
-                <li>Les passagés pourront éventuellement enregistrer un ou plusieurs bagages</li>
+                <li>Les passagers pourront éventuellement enregistrer un ou plusieurs bagages</li>
             </ol>
         </div>
     </section>
@@ -165,7 +165,7 @@
         <p>Après avoir échangé sur les besoins de cette société, vous souhaitez réalisez un diagramme de cas d'utilisation répondant aux demandes suivantes :</p>
         <div class="instructions">
             <ol>
-                <li>Un client doit pouvoir effectuer une réservation en ligne choisir également le nombre de places qu'il souhaite réserver</li>
+                <li>Un client doit pouvoir effectuer une réservation en ligne et choisir également le nombre de places qu'il souhaite réserver</li>
                 <li>A la suite d'une réservation, un client doit pouvoir effectuer une demande de modification. Cette demande sera validée ou non par la compagnie aérienne.</li>
                 <li>A la suite d'une réservation, un client doit pouvoir effectuer une demande de remboursement si le vol est annulé. Cette demande sera validée ou non par la compagnie aérienne.</li>
             </ol>
