--- a/02-presentation.html
+++ b/02-presentation.html
@@ -164,57 +164,57 @@
             <tr>
                 <td>2.5.1</td>
                 <td>Decembre 2017</td>
-                <td><a href="https://www.omg.org/spec/UML/2.5.1">https://www.omg.org/spec/UML/2.5.1</a></td>
+                <td><a href="https://www.omg.org/spec/UML/2.5.1" target="_blank">https://www.omg.org/spec/UML/2.5.1</a></td>
             </tr>
             <tr>
                 <td>2.4.1</td>
                 <td>Juillet 2011</td>
-                <td><a href="https://www.omg.org/spec/UML/2.4.1">https://www.omg.org/spec/UML/2.4.1</a></td>
+                <td><a href="https://www.omg.org/spec/UML/2.4.1" target="_blank">https://www.omg.org/spec/UML/2.4.1</a></td>
             </tr>
             <tr>
                 <td>2.3</td>
                 <td>Mai 2010</td>
-                <td><a href="https://www.omg.org/spec/UML/2.3">https://www.omg.org/spec/UML/2.3</a></td>
+                <td><a href="https://www.omg.org/spec/UML/2.3" target="_blank">https://www.omg.org/spec/UML/2.3</a></td>
             </tr>
             <tr>
                 <td>2.2</td>
                 <td>Janvier 2009</td>
-                <td><a href="https://www.omg.org/spec/UML/2.2">https://www.omg.org/spec/UML/2.2</a></td>
+                <td><a href="https://www.omg.org/spec/UML/2.2" target="_blank">https://www.omg.org/spec/UML/2.2</a></td>
             </tr>
             <tr>
                 <td>2.1.2</td>
                 <td>Octobre 2007</td>
-                <td><a href="https://www.omg.org/spec/UML/2.1.2">https://www.omg.org/spec/UML/2.1.2</a></td>
+                <td><a href="https://www.omg.org/spec/UML/2.1.2" target="_blank">https://www.omg.org/spec/UML/2.1.2</a></td>
             </tr>
             <tr>
                 <td>2.0</td>
                 <td>Juillet 2005</td>
-                <td><a href="https://www.omg.org/spec/UML/2.0">https://www.omg.org/spec/UML/2.0</a></td>
+                <td><a href="https://www.omg.org/spec/UML/2.0" target="_blank">https://www.omg.org/spec/UML/2.0</a></td>
             </tr>
             <tr>
                 <td>1.5</td>
                 <td>Mars 2003</td>
-                <td><a href="https://www.omg.org/spec/UML/1.5">https://www.omg.org/spec/UML/1.5</a></td>
+                <td><a href="https://www.omg.org/spec/UML/1.5" target="_blank">https://www.omg.org/spec/UML/1.5</a></td>
             </tr>
             <tr>
                 <td>1.4</td>
                 <td>Septembre 2001</td>
-                <td><a href="https://www.omg.org/spec/UML/1.4">https://www.omg.org/spec/UML/1.4</a></td>
+                <td><a href="https://www.omg.org/spec/UML/1.4" target="_blank">https://www.omg.org/spec/UML/1.4</a></td>
             </tr>
             <tr>
                 <td>1.3</td>
                 <td>Février 2000</td>
-                <td><a href="https://www.omg.org/spec/UML/1.3">https://www.omg.org/spec/UML/1.3</a></td>
+                <td><a href="https://www.omg.org/spec/UML/1.3" target="_blank">https://www.omg.org/spec/UML/1.3</a></td>
             </tr>
             <tr>
                 <td>1.2</td>
                 <td>Juillet 1999</td>
-                <td><a href="https://www.omg.org/spec/UML/1.2">https://www.omg.org/spec/UML/1.2</a></td>
+                <td><a href="https://www.omg.org/spec/UML/1.2" target="_blank">https://www.omg.org/spec/UML/1.2</a></td>
             </tr>
             <tr>
                 <td>1.1</td>
                 <td>Decembre 1997</td>
-                <td><a href="https://www.omg.org/spec/UML/1.1">https://www.omg.org/spec/UML/1.1</a></td>
+                <td><a href="https://www.omg.org/spec/UML/1.1" target="_blank">https://www.omg.org/spec/UML/1.1</a></td>
             </tr>
             </tbody>
         </table>
@@ -223,10 +223,10 @@
     <section>
         <h3>Objectifs</h3>
         <ul>
-            <li>Apporter aux utilisateurs un langage de modélisation commun afin de pouvoir échanger des informations de conception</li>
-            <li>Pouvoir étendre le langage pour repondre aux besoins spécifiques</li>
-            <li>Etre indépendant vis-à-vis des langages de programmation et des processus</li>
-            <li>Encourager le développement des concepts Orientés Objet</li>
+            <li>Apporter aux utilisateurs un <strong>langage de modélisation commun</strong> afin de pouvoir échanger des informations de conception</li>
+            <li>Pouvoir <strong>étendre le langage</strong> pour repondre aux besoins spécifiques</li>
+            <li>Etre <strong>indépendant</strong> vis-à-vis des langages de programmation et des processus</li>
+            <li>Encourager le développement des concepts <strong>Orientés Objet</strong></li>
         </ul>
     </section>
 
