Add Class diagram exercise

--- a/06-class.html
+++ b/06-class.html
@@ -387,6 +387,38 @@
                 <li>Ecrire ensuite le <strong>code source correspondant</strong> en utilisant le langage orienté objet de votre choix</li>
             </ol>
         </div>
+        <footer>
+            <a href="#" class="info">Vous pouvez utiliser le design pattern <strong>Composite</strong></a>
+        </footer>
+    </section>
+
+    <section>
+        <h3>Exercice</h3>
+        <p>L'entreprise StarBuml qui vend des cafés souhaite totalement informatiser ses processus. De la prise de la commande à la livraison en passant par la préparation, l'ensemble de ces tâches devront être enregistrées dans un système d'information.</p>
+        <p>Voici le fonctionnement actuel :</p>
+        <div class="instructions">
+            <ol>
+                <li>Un client arrive dans le café et fait la queue pour passer sa commande</li>
+                <li>Il passe ensuite sa commande auprès du caissier</li>
+                <li>Le caissier demande alors au client de payer pendant que son café est préparé</li>
+                <li>Si la commande est simple (expresso, café allongé...), c'est le caissier qui prépare le café</li>
+                <li>Sinon, c'est un "Barista" qui va s'en occuper</li>
+                <li>Une fois le café prêt et que la commande est payée, il est alors livré au client</li>
+            </ol>
+        </div>
+    </section>
+
+    <section>
+        <h3>Exercice (suite)</h3>
+        <p>Vous allez donc schématiser l'application qui sera réalisée en présentant :</p>
+        <div class="instructions">
+            <ol>
+                <li>Un diagramme de cas d'utilisation</li>
+                <li>Un diagramme de d'activité</li>
+                <li>Un diagramme de séquence présentant l'enregistrement en base de données de la commande et le calcul du montant à payer</li>
+                <li>Un diagramme de classe qui utilisera le design pattern <strong>Decorator</strong> afin d'ajouter des ingrédients au café (sucre, lait, chocolat...) et ainsi calculer le coût de la commande</li>
+            </ol>
+        </div>
     </section>
 
 </section>
