--- a/02-presentation.html
+++ b/02-presentation.html
@@ -238,7 +238,7 @@
                 <h4>Structure</h4>
                 <ul style="font-size: 0.8em;">
                     <li><strong>Diagramme de classe</strong></li>
-                    <li>Diagramme de composants</li>
+                    <li><strong>Diagramme de composants</strong></li>
                     <li>Diagramme de structure composite</li>
                     <li><strong>Diagramme de déploiement</strong></li>
                     <li>Diagramme d'objets</li>
@@ -258,7 +258,7 @@
                     <li>Diagramme de communication</li>
                     <li><strong>Diagramme de séquence</strong></li>
                     <li>Diagramme de temps</li>
-                    <li><strong>Diagramme global d'interaction</strong></li>
+                    <li>Diagramme global d'interaction</li>
                 </ul>
             </div>
         </div>
