--- a/06-class.html
+++ b/06-class.html
@@ -450,7 +450,7 @@
         <div class="instructions">
             <ol>
                 <li>Un diagramme de cas d'utilisation</li>
-                <li>Un diagramme de d'activité</li>
+                <li>Un diagramme d'activité</li>
                 <li>Un diagramme de séquence présentant l'enregistrement en base de données de la commande et le calcul du montant à payer</li>
                 <li>Un diagramme de classe qui utilisera le design pattern <strong>Decorator</strong> afin d'ajouter des ingrédients au café (sucre, lait, chocolat...) et ainsi calculer le coût de la commande</li>
             </ol>
