Add SOLID principles

--- a/06-class.html
+++ b/06-class.html
@@ -438,6 +438,15 @@ public class Person {
     </section>
 
     <section>
+        <h3>SOLID</h3>
+        <p><strong>Single-responsibility principle</strong> : Chaque classe ne doit avoir qu'une seule responsabilité.</p>
+        <p><strong>Open–closed principle</strong> : Le code doit être ouvert à l'extension mais fermé à la modification.</p>
+        <p><strong>Liskov substitution principle</strong> : Une fonction utilisant la référence d'un type doit pouvoir utiliser utiliser les références de ses sous-types sans les connaître.</p>
+        <p><strong>Interface segregation principle</strong> : Plusieurs interfaces spécifiques sont meilleures qu'une seule interface générique.</p>
+        <p><strong>Dependency inversion principle</strong> : Dépendre des abstractions et non des implémentations.</p>
+    </section>
+
+    <section>
         <h3>Exemple</h3>
         <img src="assets/images/diagram-class-example.png" alt="Diagramme de classe">
     </section>
