--- a/06-class.html
+++ b/06-class.html
@@ -480,7 +480,7 @@ public class Person {
 
     <section>
         <h3>Exercice (suite)</h3>
-        <p>Dans le but de réaliser des économie d'énergie, l'école souhaiterait ajuster la chaleur de chaque salle en fonction du nombre d'étudiants et des ordinateurs présent à l'intérieur.</p>
+        <p>Dans le but de réaliser des économies d'énergie, l'école souhaiterait ajuster la chaleur de chaque salle en fonction du nombre d'étudiants et des ordinateurs présent à l'intérieur.</p>
         <p>Pour cela, elle souhaiterait pouvoir utiliser une librairie déjà existante :</p>
         <pre><code class="language-php">interface Heatable {
     public function getWatts(): float;
