--- a/06-class.html
+++ b/06-class.html
@@ -175,10 +175,10 @@
                 <div class="tabs-container">
                     <ul class="tabs-buttons-container">
                         <li>
-                            <button class="tab-button active" data-target="tab-php">PHP</button>
+                            <button class="tab-button active" data-target=".tab-php" data-target-everywhere="1">PHP</button>
                         </li>
                         <li>
-                            <button class="tab-button" data-target="tab-java">Java</button>
+                            <button class="tab-button" data-target=".tab-java" data-target-everywhere="1">Java</button>
                         </li>
                     </ul>
                     <div class="tabs">
@@ -262,14 +262,38 @@ public class Person {
                 <img src="assets/images/class-association-example.png" alt="Association">
             </div>
             <div class="col">
-<pre><code class="language-php">class Order {
+                <div class="tabs-container">
+                    <ul class="tabs-buttons-container">
+                        <li>
+                            <button class="tab-button active" data-target=".tab-php" data-target-everywhere="1">PHP</button>
+                        </li>
+                        <li>
+                            <button class="tab-button" data-target=".tab-java" data-target-everywhere="1">Java</button>
+                        </li>
+                    </ul>
+                    <div class="tabs">
+                        <div class="tab-php active">
+                            <pre><code class="language-php">class Order {
     private Customer $customer;
 }</code></pre>
-<pre><code class="language-php">class Customer {
+                            <pre><code class="language-php">class Customer {
     private string $firstName;
     private string $lastLame;
     private array $orders;
 }</code></pre>
+                        </div>
+                        <div class="tab-java">
+                            <pre><code class="language-java">class Order {
+    private Customer customer;
+}</code></pre>
+                            <pre><code class="language-java">class Customer {
+    private String firstName;
+    private String lastLame;
+    private Array&lt;Order&gt; orders;
+}</code></pre>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -281,13 +305,36 @@ public class Person {
                 <img src="assets/images/class-association-unidirectional-example.png" alt="Unidirectional Association">
             </div>
             <div class="col">
-<pre><code class="language-php">class Order {
+                <div class="tabs-container">
+                    <ul class="tabs-buttons-container">
+                        <li>
+                            <button class="tab-button active" data-target=".tab-php" data-target-everywhere="1">PHP</button>
+                        </li>
+                        <li>
+                            <button class="tab-button" data-target=".tab-java" data-target-everywhere="1">Java</button>
+                        </li>
+                    </ul>
+                    <div class="tabs">
+                        <div class="tab-php active">
+                            <pre><code class="language-php">class Order {
     private Customer $customer;
 }</code></pre>
-                <pre><code class="language-php">class Customer {
+                            <pre><code class="language-php">class Customer {
     private string $firstName;
     private string $lastLame;
 }</code></pre>
+                        </div>
+                        <div class="tab-java">
+                            <pre><code class="language-java">class Order {
+    private Customer customer;
+}</code></pre>
+                            <pre><code class="language-java">class Customer {
+    private String firstName;
+    private String lastLame;
+}</code></pre>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -295,16 +342,43 @@ public class Person {
     <section>
         <h3>Forward engineering : Association Dependency</h3>
         <img src="assets/images/class-dependency-example.png" alt="Association Dependency">
-<pre><code class="language-php">class Invoice {
+        <div class="tabs-container">
+            <ul class="tabs-buttons-container">
+                <li>
+                    <button class="tab-button active" data-target=".tab-php" data-target-everywhere="1">PHP</button>
+                </li>
+                <li>
+                    <button class="tab-button" data-target=".tab-java" data-target-everywhere="1">Java</button>
+                </li>
+            </ul>
+            <div class="tabs">
+                <div class="tab-php active">
+                    <pre><code class="language-php">class Invoice {
     private string $fileName;
 
     public function generatePdf(Order $order): void {
         // TODO: Generate PDF file from Order object
     }
 }</code></pre>
-                <pre><code class="language-php">class Order {
+                    <pre><code class="language-php">class Order {
     private Customer $customer;
 }</code></pre>
+                </div>
+                <div class="tab-java">
+                    <pre><code class="language-java">class Invoice {
+    private String fileName;
+
+    public void generatePdf(Order order) {
+        // TODO: Generate PDF file from Order object
+    }
+
+}</code></pre>
+                    <pre><code class="language-php">class Order {
+    private Customer customer;
+}</code></pre>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section>
@@ -314,6 +388,17 @@ public class Person {
                 <img src="assets/images/class-inheritance-example.png" alt="Inheritance example">
             </div>
             <div class="col">
+                <div class="tabs-container">
+                    <ul class="tabs-buttons-container">
+                        <li>
+                            <button class="tab-button active" data-target=".tab-php" data-target-everywhere="1">PHP</button>
+                        </li>
+                        <li>
+                            <button class="tab-button" data-target=".tab-java" data-target-everywhere="1">Java</button>
+                        </li>
+                    </ul>
+                    <div class="tabs">
+                        <div class="tab-php active">
 <pre style="max-height: 400px;"><code class="language-php">class Person {
     public string $firstname;
     public string $lastname;
@@ -329,6 +414,26 @@ public class Person {
         return parent::getFullname() . " (employee)";
     }
 }</code></pre>
+                        </div>
+                        <div class="tab-java">
+<pre style="max-height: 400px;"><code class="language-java">class Person {
+    private String firstname;
+    private String lastname;
+
+    public String getFullname() {
+        return this.firstname + " " + this.lastname;
+    }
+}</code></pre>
+<pre style="max-height: 400px;"><code class="language-java">class Employee extends Person {
+    private float salary;
+
+    public String getFullname() {
+        return super.getFullname() + " (employee)";
+    }
+}</code></pre>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <footer>
@@ -343,6 +448,17 @@ public class Person {
                 <img src="assets/images/class-implementation-example.png" alt="Implementation example">
             </div>
             <div class="col">
+                <div class="tabs-container">
+                    <ul class="tabs-buttons-container">
+                        <li>
+                            <button class="tab-button active" data-target=".tab-php" data-target-everywhere="1">PHP</button>
+                        </li>
+                        <li>
+                            <button class="tab-button" data-target=".tab-java" data-target-everywhere="1">Java</button>
+                        </li>
+                    </ul>
+                    <div class="tabs">
+                        <div class="tab-php active">
 <pre style="max-height: 400px;"><code class="language-php">interface Weightable {
     public function getWeight(): float;
 }</code></pre>
@@ -355,6 +471,23 @@ public class Person {
         return $this->weight;
     }
 }</code></pre>
+                        </div>
+                        <div class="tab-java">
+<pre style="max-height: 400px;"><code class="language-java">interface Weightable {
+    public float getWeight();
+}</code></pre>
+<pre><code class="language-java">class Person implements Weightable {
+    private String firstname;
+    private String lastname;
+    private float weight;
+
+    public float getWeight() {
+        return this.weight;
+    }
+}</code></pre>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -364,6 +497,18 @@ public class Person {
         <p>L'exemple précédent pourrait permettre de définir plusieurs classes implémentant l'interface <code class="language-php">Weightable</code>.</p>
         <p>Dans le cas d'une compagnie aérienne, nous pourrions par exemple avoir une autre classe <code class="language-php">Lugguage</code> implémentant également l'interface <code class="language-php">Weightable</code></p>
         <p>Cela permettrait ensuite d'écrire une fonction qui permettrait de calculer le poids total transporté :</p>
+
+        <div class="tabs-container">
+            <ul class="tabs-buttons-container">
+                <li>
+                    <button class="tab-button active" data-target=".tab-php" data-target-everywhere="1">PHP</button>
+                </li>
+                <li>
+                    <button class="tab-button" data-target=".tab-java" data-target-everywhere="1">Java</button>
+                </li>
+            </ul>
+            <div class="tabs">
+                <div class="tab-php active">
 <pre style="max-height: 400px;"><code class="language-php">function getTotalWeight(Collection&lt;Weightable&gt; $items) {
     $total = 0;
     foreach($items as $item) {
@@ -371,8 +516,21 @@ public class Person {
     }
     return $total;
 }</code></pre>
+                </div>
+                <div class="tab-java">
+<pre style="max-height: 400px;"><code class="language-java">float getTotalWeight(Collection&lt;Weightable&gt; items) {
+    float total = 0;
+    for(Weightable item : items) {
+        total += item.getWeight();
+    }
+    return total;
+}</code></pre>
+                </div>
+            </div>
+        </div>
+
         <footer>
-            <a href="#" class="info">C'est le principe du polymorphisme qui utilisé</a>
+            <a href="#" class="info">C'est le principe du polymorphisme qui est utilisé</a>
         </footer>
     </section>
 
@@ -383,6 +541,17 @@ public class Person {
                 <img src="assets/images/class-aggregation-example.png" alt="Aggregation">
             </div>
             <div class="col">
+                <div class="tabs-container">
+                    <ul class="tabs-buttons-container">
+                        <li>
+                            <button class="tab-button active" data-target=".tab-php" data-target-everywhere="1">PHP</button>
+                        </li>
+                        <li>
+                            <button class="tab-button" data-target=".tab-java" data-target-everywhere="1">Java</button>
+                        </li>
+                    </ul>
+                    <div class="tabs">
+                        <div class="tab-php active">
 <pre><code class="language-php">class Car {
     public string $model;
     private Engine $engine;
@@ -396,6 +565,23 @@ public class Person {
     public int $power;
     public string $energy;
 }</code></pre>
+                        </div>
+                        <div class="tab-java">
+<pre><code class="language-java">class Car {
+    private String model;
+    private Engine engine;
+
+    public Car(Engine engine) {
+        this.engine = engine;
+    }
+}</code></pre>
+<pre><code class="language-java">class Engine {
+    private int power;
+    private String energy;
+}</code></pre>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <p>Si la voiture a un accident, le moteur peut être retiré et installé sur un autre véhicule.</p>
@@ -411,19 +597,47 @@ public class Person {
                 <img src="assets/images/class-composition-example.png" alt="Composition">
             </div>
             <div class="col">
-<pre><code class="language-php">class Person implements Weightable {
-    public string $firstname;
-    public string $lastname;
-    private Head $head;
+                <div class="tabs-container">
+                    <ul class="tabs-buttons-container">
+                        <li>
+                            <button class="tab-button active" data-target=".tab-php" data-target-everywhere="1">PHP</button>
+                        </li>
+                        <li>
+                            <button class="tab-button" data-target=".tab-java" data-target-everywhere="1">Java</button>
+                        </li>
+                    </ul>
+                    <div class="tabs">
+                        <div class="tab-php active">
+    <pre><code class="language-php">class Person implements Weightable {
+        public string $firstname;
+        public string $lastname;
+        private Head $head;
 
-    public function __construct()
-    {
-        $this->head = new Head();
-    }
-}</code></pre>
-<pre><code class="language-php">class Head {
-    public string $hairColor;
-}</code></pre>
+        public function __construct()
+        {
+            $this->head = new Head();
+        }
+    }</code></pre>
+    <pre><code class="language-php">class Head {
+        public string $hairColor;
+    }</code></pre>
+                        </div>
+                        <div class="tab-java">
+    <pre><code class="language-java">class Person implements Weightable {
+        private String firstname;
+        private String lastname;
+        private Head head;
+
+        public Person() {
+            this.head = new Head();
+        }
+    }</code></pre>
+    <pre><code class="language-java">class Head {
+        private String hairColor;
+    }</code></pre>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <footer>
@@ -482,20 +696,50 @@ public class Person {
         <h3>Exercice (suite)</h3>
         <p>Dans le but de réaliser des économies d'énergie, l'école souhaiterait ajuster la chaleur de chaque salle en fonction du nombre d'étudiants et des ordinateurs présent à l'intérieur.</p>
         <p>Pour cela, elle souhaiterait pouvoir utiliser une librairie déjà existante :</p>
-        <pre><code class="language-php">interface Heatable {
+        <div class="tabs-container">
+            <ul class="tabs-buttons-container">
+                <li>
+                    <button class="tab-button active" data-target=".tab-php" data-target-everywhere="1">PHP</button>
+                </li>
+                <li>
+                    <button class="tab-button" data-target=".tab-java" data-target-everywhere="1">Java</button>
+                </li>
+            </ul>
+            <div class="tabs">
+                <div class="tab-php active">
+<pre><code class="language-php">interface Heatable {
     public function getWatts(): float;
 }</code></pre>
-        <pre><code class="language-php">interface Sizeable {
+<pre><code class="language-php">interface Sizeable {
     public function getHeight(): int;
     public function getWidth(): int;
     public function getLength(): int;
 }</code></pre>
-        <pre><code class="language-php">function getHeatingPower(Sizeable $room, Collection&lt;Heatable&gt; $elements) {
+<pre><code class="language-php">function getHeatingPower(Sizeable $room, Collection&lt;Heatable&gt; $elements) {
     $space = $room->getHeight() * $room->getWidth() * $room->getLength();
     $totalWatts = 0;
     foreach ($element in $elements) { $totalWatts += $element->getWatts(); }
     return ($space * 20) - $totalWatts;
 }</code></pre>
+                </div>
+                <div class="tab-java">
+<pre><code class="language-java">interface Heatable {
+    float getWatts();
+}</code></pre>
+<pre><code class="language-java">interface Sizeable {
+    int getHeight();
+    int getWidth();
+    int getLength();
+}</code></pre>
+<pre><code class="language-java">float getHeatingPower(Sizeable room, Collection&lt;Heatable&gt; elements) {
+    int space = room.getHeight() * room.getWidth() * room.getLength();
+    float totalWatts = 0;
+    for (Heatable element : elements) { totalWatts += element.getWatts(); }
+    return (space * 20) - totalWatts;
+}</code></pre>
+                </div>
+            </div>
+        </div>
         <footer>
             <a href="https://energieplus-lesite.be/evaluer/bureautique2/evaluer-les-charges-thermiques-dues-aux-equipements/" class="info" target="_blank">Personne ~ 70W / Ordinateur ~ 80W</a>
         </footer>
